change name fix more

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
 	<meta charset="UTF-8">
-	<title>"Chew Paper Box" Elm game by Vlad Batushkov</title>
-  	<style type="text/css">
+	<title>EatOrShit - tasty Elm game to kill your free time, created by Vlad Batushkov</title>
+	<style type="text/css">
 		@font-face {
 			font-family: "font";
 			src: url(always_forever.ttf) format("truetype");
@@ -11,10 +12,12 @@
 	</style>
 	<script src="./main.js"></script>
 </head>
+
 <body>
 	<div id="root">
-	<script>Elm.Main.init({
-		node: document.getElementById("root")
-	})</script>
+		<script>Elm.Main.init({
+				node: document.getElementById("root")
+			})</script>
 </body>
+
 </html>
