--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>EatOrShit - tasty Elm game to kill your free time, created by Vlad Batushkov</title>
+	<link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@300;500&display=swap" rel="stylesheet">
 	<style type="text/css">
-		@font-face {
-			font-family: "font";
-			src: url(always_forever.ttf) format("truetype");
+		body {
+			font-family: 'Grandstander', cursive !important
 		}
 	</style>
 	<script src="./main.js"></script>
