--- a/index.html
+++ b/index.html
@@ -5271,253 +5271,253 @@ var $author$project$Main$allFood = _List_fromArray(
 		'Popcorn',
 		_List_fromArray(
 			[$author$project$Main$NotHealthy, $author$project$Main$Dessert]),
-		'../images/food/popcorn.png'),
+		'images/food/popcorn.png'),
 		A4(
 		$author$project$Main$Food,
 		1,
 		'Happy Meal',
 		_List_fromArray(
 			[$author$project$Main$FastFood, $author$project$Main$NotHealthy]),
-		'../images/food/happymeal.png'),
+		'images/food/happymeal.png'),
 		A4(
 		$author$project$Main$Food,
 		2,
 		'Pizza',
 		_List_fromArray(
 			[$author$project$Main$NotHealthy]),
-		'../images/food/pizza.png'),
+		'images/food/pizza.png'),
 		A4(
 		$author$project$Main$Food,
 		3,
 		'Tiramisu',
 		_List_fromArray(
 			[$author$project$Main$Dessert]),
-		'../images/food/chocolatecake.png'),
+		'images/food/chocolatecake.png'),
 		A4(
 		$author$project$Main$Food,
 		4,
 		'Salad',
 		_List_fromArray(
 			[$author$project$Main$Healthy]),
-		'../images/food/salad.png'),
+		'images/food/salad.png'),
 		A4(
 		$author$project$Main$Food,
 		5,
 		'Apple Stump',
 		_List_fromArray(
 			[$author$project$Main$Junk]),
-		'../images/food/applestump.png'),
+		'images/food/applestump.png'),
 		A4(
 		$author$project$Main$Food,
 		6,
 		'Empty Bottle',
 		_List_fromArray(
 			[$author$project$Main$Junk, $author$project$Main$Drinks]),
-		'../images/food/bottle.png'),
+		'images/food/bottle.png'),
 		A4(
 		$author$project$Main$Food,
 		7,
 		'Bread',
 		_List_fromArray(
 			[$author$project$Main$Healthy]),
-		'../images/food/bread.png'),
+		'images/food/bread.png'),
 		A4(
 		$author$project$Main$Food,
 		8,
 		'Burgers',
 		_List_fromArray(
 			[$author$project$Main$NotHealthy, $author$project$Main$Meat]),
-		'../images/food/burgers.png'),
+		'images/food/burgers.png'),
 		A4(
 		$author$project$Main$Food,
 		9,
 		'Carrot',
 		_List_fromArray(
 			[$author$project$Main$Healthy, $author$project$Main$Vegetables]),
-		'../images/food/carrot.png'),
+		'images/food/carrot.png'),
 		A4(
 		$author$project$Main$Food,
 		10,
 		'Sode Water',
 		_List_fromArray(
 			[$author$project$Main$Drinks]),
-		'../images/food/cola.png'),
+		'images/food/cola.png'),
 		A4(
 		$author$project$Main$Food,
 		11,
 		'Cheese',
 		_List_fromArray(
 			[$author$project$Main$Dairy]),
-		'../images/food/cheese.png'),
+		'images/food/cheese.png'),
 		A4(
 		$author$project$Main$Food,
 		12,
 		'Creamy',
 		_List_fromArray(
 			[$author$project$Main$Dessert]),
-		'../images/food/creamy.png'),
+		'images/food/creamy.png'),
 		A4(
 		$author$project$Main$Food,
 		13,
 		'Cucumber',
 		_List_fromArray(
 			[$author$project$Main$Vegetables, $author$project$Main$Healthy]),
-		'../images/food/cucumber.png'),
-		A4($author$project$Main$Food, 14, 'Eggs', _List_Nil, '../images/food/eggs.png'),
+		'images/food/cucumber.png'),
+		A4($author$project$Main$Food, 14, 'Eggs', _List_Nil, 'images/food/eggs.png'),
 		A4(
 		$author$project$Main$Food,
 		15,
 		'Fallen Ice Cream',
 		_List_fromArray(
 			[$author$project$Main$Junk]),
-		'../images/food/icecream.png'),
+		'images/food/icecream.png'),
 		A4(
 		$author$project$Main$Food,
 		16,
 		'Jar',
 		_List_fromArray(
 			[$author$project$Main$Junk, $author$project$Main$Drinks]),
-		'../images/food/jar.png'),
+		'images/food/jar.png'),
 		A4(
 		$author$project$Main$Food,
 		17,
 		'Chicken Drumsticks',
 		_List_fromArray(
 			[$author$project$Main$FastFood]),
-		'../images/food/kfc.png'),
+		'images/food/kfc.png'),
 		A4(
 		$author$project$Main$Food,
 		18,
 		'Leftovers',
 		_List_fromArray(
 			[$author$project$Main$Junk]),
-		'../images/food/leftovers.png'),
+		'images/food/leftovers.png'),
 		A4(
 		$author$project$Main$Food,
 		19,
 		'Lemon',
 		_List_fromArray(
 			[$author$project$Main$Fruits, $author$project$Main$Healthy]),
-		'../images/food/lemon.png'),
+		'images/food/lemon.png'),
 		A4(
 		$author$project$Main$Food,
 		20,
 		'Milk',
 		_List_fromArray(
 			[$author$project$Main$Dairy, $author$project$Main$Drinks]),
-		'../images/food/milk.png'),
+		'images/food/milk.png'),
 		A4(
 		$author$project$Main$Food,
 		21,
 		'Fruity Cake',
 		_List_fromArray(
 			[$author$project$Main$Dessert]),
-		'../images/food/orangecake.png'),
+		'images/food/orangecake.png'),
 		A4(
 		$author$project$Main$Food,
 		22,
 		'Pepperoni',
 		_List_fromArray(
 			[$author$project$Main$Meat]),
-		'../images/food/pepperoni.png'),
+		'images/food/pepperoni.png'),
 		A4(
 		$author$project$Main$Food,
 		23,
 		'Plastic Box',
 		_List_fromArray(
 			[$author$project$Main$Junk]),
-		'../images/food/plasticbox.png'),
+		'images/food/plasticbox.png'),
 		A4(
 		$author$project$Main$Food,
 		24,
 		'Meat Ribs',
 		_List_fromArray(
 			[$author$project$Main$Meat]),
-		'../images/food/ribs.png'),
+		'images/food/ribs.png'),
 		A4(
 		$author$project$Main$Food,
 		25,
 		'Salmon',
 		_List_fromArray(
 			[$author$project$Main$Meat, $author$project$Main$Healthy]),
-		'../images/food/salmon.png'),
+		'images/food/salmon.png'),
 		A4(
 		$author$project$Main$Food,
 		26,
 		'Sausage Plate',
 		_List_fromArray(
 			[$author$project$Main$Meat]),
-		'../images/food/sausageplate.png'),
+		'images/food/sausageplate.png'),
 		A4(
 		$author$project$Main$Food,
 		27,
 		'Shawarma',
 		_List_fromArray(
 			[$author$project$Main$Meat, $author$project$Main$NotHealthy, $author$project$Main$FastFood]),
-		'../images/food/shawarma.png'),
+		'images/food/shawarma.png'),
 		A4(
 		$author$project$Main$Food,
 		28,
 		'Steak',
 		_List_fromArray(
 			[$author$project$Main$Meat]),
-		'../images/food/steak.png'),
+		'images/food/steak.png'),
 		A4(
 		$author$project$Main$Food,
 		29,
 		'Steak Plate',
 		_List_fromArray(
 			[$author$project$Main$Meat]),
-		'../images/food/steakplate.png'),
+		'images/food/steakplate.png'),
 		A4(
 		$author$project$Main$Food,
 		30,
 		'Tacos',
 		_List_fromArray(
 			[$author$project$Main$Meat]),
-		'../images/food/tacos.png'),
+		'images/food/tacos.png'),
 		A4(
 		$author$project$Main$Food,
 		31,
 		'Tomatos',
 		_List_fromArray(
 			[$author$project$Main$Vegetables, $author$project$Main$Healthy]),
-		'../images/food/tomatos.png'),
+		'images/food/tomatos.png'),
 		A4(
 		$author$project$Main$Food,
 		32,
 		'Wok',
 		_List_fromArray(
 			[$author$project$Main$FastFood, $author$project$Main$Spicy]),
-		'../images/food/wok.png'),
+		'images/food/wok.png'),
 		A4(
 		$author$project$Main$Food,
 		33,
 		'Strawberry Cake',
 		_List_fromArray(
 			[$author$project$Main$Dessert]),
-		'../images/food/strawberrycake.png'),
+		'images/food/strawberrycake.png'),
 		A4(
 		$author$project$Main$Food,
 		34,
 		'Shake',
 		_List_fromArray(
 			[$author$project$Main$Drinks, $author$project$Main$Healthy]),
-		'../images/food/shake.png'),
+		'images/food/shake.png'),
 		A4(
 		$author$project$Main$Food,
 		35,
 		'Pepper',
 		_List_fromArray(
 			[$author$project$Main$Spicy, $author$project$Main$Vegetables]),
-		'../images/food/redhotchilipepper.png'),
+		'images/food/redhotchilipepper.png'),
 		A4(
 		$author$project$Main$Food,
 		36,
 		'Sausages',
 		_List_fromArray(
 			[$author$project$Main$Meat]),
-		'../images/food/sausages.png')
+		'images/food/sausages.png')
 	]);
 var $author$project$Main$Hero = F6(
 	function (id, name, desc, picture, goodTags, badTags) {
@@ -5528,7 +5528,7 @@ var $author$project$Main$arnold = A6(
 	1,
 	'Arnold Trash',
 	'Eats any leftovers and junk. Drinks all the fluids. Never touches normal food.',
-	'../images/hero/arnold.png',
+	'images/hero/arnold.png',
 	_List_fromArray(
 		[$author$project$Main$Junk, $author$project$Main$Drinks]),
 	_List_fromArray(
@@ -7128,7 +7128,7 @@ var $author$project$Main$chuck = A6(
 	3,
 	'Chuck Muffin',
 	'Eats plant-based foods and dairy products. Avoiding any unhealthy food.',
-	'../images/hero/chuck.png',
+	'images/hero/chuck.png',
 	_List_fromArray(
 		[$author$project$Main$Healthy, $author$project$Main$Dairy, $author$project$Main$Fruits, $author$project$Main$Vegetables, $author$project$Main$Drinks]),
 	_List_fromArray(
@@ -7138,7 +7138,7 @@ var $author$project$Main$terry = A6(
 	2,
 	'Terry Fatness',
 	'Loves fast-food and heavy meals. Vomit on desserts and healthy food.',
-	'../images/hero/terry.png',
+	'images/hero/terry.png',
 	_List_fromArray(
 		[$author$project$Main$Meat, $author$project$Main$FastFood, $author$project$Main$NotHealthy, $author$project$Main$Spicy]),
 	_List_fromArray(
@@ -10255,7 +10255,7 @@ var $author$project$Main$heart = A2(
 					$elm$html$Html$img,
 					_List_fromArray(
 						[
-							$elm$html$Html$Attributes$src('../images/hero/heart.png')
+							$elm$html$Html$Attributes$src('images/hero/heart.png')
 						]),
 					_List_Nil)
 				]))
